--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
 
 #Configuration for Log File Path
-logging.file.name=/var/tmp/kube-app.log
+logging.file.name=/var/log/mysql-app.log
