--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -6,7 +6,7 @@ management.endpoint.health.show-details=always
 spring.datasource.url=jdbc:mysql://localhost:3306/kube?createDatabaseIfNotExist=true&useSSL=false&user=root
 #MySQL Root user password in kubernetes deployment is password
 spring.datasource.password=root
-spring.datasource.username=root
+spring.datasource.username=tom
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
