--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
 #For Deployment in Kubernetes
-spring.datasource.url=jdbc:mysql://localhost:3306/kube?createDatabaseIfNotExist=true&useSSL=false&user=root
+spring.datasource.url=jdbc:mysql://172.31.15.79:3306/kube?createDatabaseIfNotExist=true&useSSL=false&user=root
 #MySQL Root user password in kubernetes deployment is password
 spring.datasource.password=root
 spring.datasource.username=tom
