--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-spring.datasource.url=jdbc:mysql://db_url/kube?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&user=root
+spring.datasource.url=jdbc:mysql://3.90.46.118:3306/kube?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&user=root
 spring.datasource.password=root
 spring.datasource.username=tom
 
