--- a/springboot-backend/appsec.yml
+++ b/springboot-backend/appsec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 
 files:
-  - source: /
+  - source: /var/lib/jenkins/workspace/deployment\ job/springboot-backend
     destination: /var/lib/jenkins/workspace/deployment\ job/springboot-backend
 
 permissions:
