--- a/springboot-backend/appsec.yml
+++ b/springboot-backend/appsec.yml
@@ -13,14 +13,14 @@ permissions:
 
 hooks:
   ApplicationStop:
-    - location: stop.sh
+    - location: scripts/stop.sh
       timeout: 20
       runas: ubuntu
   ApplicationStart:
-    - location: start.sh
+    - location: scripts/start.sh
       timeout: 20
       runas: ubuntu
   ValidateService:
-    - location: validate.sh
+    - location: scripts/validate.sh
       timeout: 120
       runas: ubuntu
