--- a/springboot-backend/appsec.yml
+++ b/springboot-backend/appsec.yml
@@ -8,19 +8,19 @@ files:
 permissions:
   - object: /
     pattern: "**"
-    owner: ubuntu
-    group: ubuntu
+    owner: root
+    group: root
 
 hooks:
   ApplicationStop:
     - location: scripts/stop.sh
       timeout: 20
-      runas: ubuntu
+      runas: root
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 20
-      runas: ubuntu
+      runas: root
   ValidateService:
     - location: scripts/validate.sh
       timeout: 120
-      runas: ubuntu
+      runas: root
