--- a/springboot-backend/appsec.yml
+++ b/springboot-backend/appsec.yml
@@ -8,19 +8,19 @@ files:
 permissions:
   - object: /
     pattern: "**"
-    owner: root
-    group: root
+    owner: ubuntu
+    group: ubuntu
 
 hooks:
   ApplicationStop:
     - location: scripts/stop.sh
       timeout: 20
-      runas: root
+      runas: ubuntu
   ApplicationStart:
     - location: scripts/start.sh
       timeout: 20
-      runas: root
+      runas: ubuntu
   ValidateService:
     - location: scripts/validate.sh
       timeout: 120
-      runas: root
+      runas: ubuntu
